--- a/ASFBatchCmd/ASFBatchCmd.csproj
+++ b/ASFBatchCmd/ASFBatchCmd.csproj
@@ -11,9 +11,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="SteamKit2" IncludeAssets="compile" />
-		<PackageReference Include="System.Composition.AttributedModel" />
-		<PackageReference Include="System.Linq.Async" IncludeAssets="compile" />
 		<PackageReference Include="Microsoft.CodeAnalysis.ResxSourceGenerator" PrivateAssets="all" />
 		<PackageReference Include="ConfigureAwaitChecker.Analyzer">
 			<PrivateAssets>all</PrivateAssets>
@@ -43,6 +40,8 @@
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
 		<Copy SourceFiles="$(TargetPath)" DestinationFolder="..\ArchiSteamFarm\ArchiSteamFarm\bin\$(Configuration)\$(TargetFramework)\plugins\" SkipUnchangedFiles="true" />
 		<Copy SourceFiles="@(ResourceDlls)" DestinationFiles="@(ResourceDlls->'..\ArchiSteamFarm\ArchiSteamFarm\bin\$(Configuration)\$(TargetFramework)\plugins\%(RecursiveDir)%(Filename)%(Extension)')" SkipUnchangedFiles="true" />
+
+		<Copy SourceFiles="$(TargetPath)" DestinationFolder="C:\Users\ASUS\Downloads\ASF-6.1.5.2\plugins\" SkipUnchangedFiles="true" />
 	</Target>
 
 </Project>
